update dependencies, also, following 1.7.10.